--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@ data/
 generals/
 app/__pycache__/*
 app/config/__pycache__/*
+airflow/dags/__pycache__/*
+airflow/plugins/__pycache__/*
+airflow/plugins/helpers/__pycache__/*
+airflow/plugins/operators/__pycache__/*
