--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ treeinterpreter = "^0.2.2"
 statsmodels = "^0.12.1"
 xlrd = "^2.0.1"
 openpyxl = "^3.0.7"
+Tree = "^0.2.4"
 
 [tool.poetry.dev-dependencies]
 pylint = "^2.6.0"
