--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ generals/*
 app/__pycache__/*
 app/config/__pycache__/*
 app/domain/__pycache__/
+airflow/logs/*
 airflow/dags/__pycache__/*
 airflow/plugins/__pycache__/*
 airflow/plugins/helpers/__pycache__/*
