sheet_names now working

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ app/__pycache__/*
 app/config/__pycache__/*
 app/domain/__pycache__/
 airflow/logs/*
+airflow/output/*
 airflow/dags/__pycache__/*
 airflow/plugins/__pycache__/*
 airflow/plugins/helpers/__pycache__/*
