--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ openpyxl = "^3.0.7"
 Tree = "^0.2.4"
 boto3 = "^1.17.53"
 configparser = "^5.0.2"
+pathlib = "^1.0.1"
 
 [tool.poetry.dev-dependencies]
 pylint = "^2.6.0"
