--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ app/config/__pycache__/*
 app/domain/__pycache__/
 airflow/logs/*
 airflow/data/*
+!airflow/data/README.md
 airflow/output/*
 !airflow/output/README.md
 airflow/app/__pycache__/*
