.gitignore is now working

--- a/.gitignore
+++ b/.gitignore
@@ -4,11 +4,16 @@ generals/*
 app/__pycache__/*
 app/config/__pycache__/*
 app/domain/__pycache__/
+
 airflow/logs/*
+!airflow/logs/README.md
+
 airflow/data/*
 !airflow/data/README.md
+
 airflow/output/*
 !airflow/output/README.md
+
 airflow/app/__pycache__/*
 airflow/dags/__pycache__/*
 airflow/plugins/__pycache__/*
