--- a/.gitignore
+++ b/.gitignore
@@ -15,10 +15,13 @@ airflow/output/*
 
 airflow/app/__pycache__/*
 airflow/dags/__pycache__/*
+
 airflow/plugins/__pycache__/*
 airflow/plugins/helpers/__pycache__/*
 airflow/plugins/operators/__pycache__/*
 airflow/plugins/config/__pycache__/*
+
 airflow/.cache/*
 airflow/.local/*
 airflow/airflow-webserver.pid
+airflow/.bash_history/*
