--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@ airflow/plugins/__pycache__/*
 airflow/plugins/helpers/__pycache__/*
 airflow/plugins/operators/__pycache__/*
 airflow/plugins/config/__pycache__/*
+airflow/plugins/infrastructure/__pycache__/
 
 airflow/.cache/*
 airflow/.local/*
